[project]
name = "mcp-591"
version = "0.1.0"
description = "MCP server for 591 rental listings"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp",
    "requests",
]

[project.scripts]
mcp-591 = "mcp_591.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
