[project]
name = "mcp-591"
version = "0.1.1"
description = "MCP server for 591 rental listings"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Asgard AI Platform" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp",
    "requests",
]

[project.scripts]
mcp-591 = "mcp_591.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "integration: hits the real 591 API (deselected by default)",
]
